src/App.css
.formblock {
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translateX(-50%) translateY(-50%);
  -webkit-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  
}

.form {
  display:flex;
}
.modes {
 text-align: right;
 padding-top:5px;
}
.btn {
  margin-left: 5px;
  width: 150px;
}


@media (max-width: 575.98px) { 
  .formblock {
width: 65%;
  }

 }

